Changes for 1.0beta11:

 - support of delta flag in item definition (Alexei)
 - added column items.delta,prevorgvalue (Alexei)
 - support for operator '#', not equal. (Alexei)
 - support for functions date() and time() (Alexei)
 - fix of /proc/stat interpretation in diskdevice.c (Alexei)
 - support of system[uptime] for Solaris. Thanks to Franky Van
 Liedekerke. (Alexei)
 - fix for disk space calculation. Use statvfs' f_frsize instead
 of f_bsize. Thanks to Franky Van Liedekerke. (Alexei)
 - restrict host status change from Unreachable (Alexei)
 - fix for Solaris swap sizes (Alexei)
 - fix for counting of triggers in map.php.  (Alexei)
 - added translation of special HTML characters in history of
 alerts and alarms (Alexei)
 - fixed calculation of graph width under MS Explorer (Alexei)
 - fixed interpretation of parameter 'from' for graphs (Alexei)
 - removed references to screens_graphs (Alexei)
 - fix for proc_cnt[*] under Solaris (Alexei)
 - fix of automatic image scaling under Explorer for charts.php
 (Alexei)
 - fixed division by zero and infinite loop in graphs (Alexei)
 - fixes for agent. Error checking for opendir() (Alexei)
 - fix for syslog logging of zabbix_trapperd (Alexei)
 - added table users_groups, usrgrp (Alexei)
 - monitoring of CPU and mainboard temperature under Linux (Alexei)
 - support for sensor[temp1],sensor[temp2],sensor[temp3] (Alexei)
 - report1.php to use 'ps -ef' (Alexei)
 - document what template information is used 
 - support for prefixes in trigger expressions (K,M,G) (Alexei)
 - new item status: 'deleted' (Alexei)
 - fixed autoconf problems under SUSE 8.2 (Alexei)
 - housekeeping to delete hosts having status 'deleted' (Alexei)
 - AC_FUNC_GETLOADAVG changes to AC_REPLACE_FUNCS(getloadavg) in
 configure.in (Alexei)
 - eliminated compiler's warnings under SUSE 8.2 (Alexei)
 - added src/zabbix_sucker/housekeeper.* (Alexei)
 - new host status: 'deleted' (Alexei)

Changes for 1.0beta10:

 - removed script misc/pinger/ (Alexei)